--- a/data/gtk/window.ui
+++ b/data/gtk/window.ui
@@ -1,44 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="RflWindow" parent="GtkApplicationWindow">
+  <menu id="main-menu">
+    <submenu>
+      <attribute name="label" translatable="yes">_Filter</attribute>
+      <item>
+        <attribute name="label" translatable="yes">_All</attribute>
+        <attribute name="action">win.filter</attribute>
+        <attribute name="target">All</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_Open</attribute>
+        <attribute name="action">win.filter</attribute>
+        <attribute name="target">Open</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_Done</attribute>
+        <attribute name="action">win.filter</attribute>
+        <attribute name="target">Done</attribute>
+      </item>
+    </submenu>
+    <item>
+      <attribute name="label" translatable="yes">_Remove Done Tasks</attribute>
+      <attribute name="action">win.remove-done-tasks</attribute>
+    </item>
+    <item>
+      <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
+      <attribute name="action">win.show-help-overlay</attribute>
+    </item>
+  </menu>
+  <template class="RflWindow" parent="AdwApplicationWindow">
     <property name="title">Reflector</property>
     <property name="width-request">800</property>
     <property name="height-request">600</property>
-    <child>
-      <object class="GtkBox">
-        <property name="orientation">vertical</property>
-        <property name="spacing">6</property>
+    <property name="content">
+      <object class="AdwLeaflet" id="leaflet">
+        <property name="can-navigate-back">True</property>
         <child>
           <object class="GtkBox">
-            <child>
-              <object class="GtkLabel">
-                <property name="label">Namespace: </property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkDropDown" id="namespace_dropdown">
-                <property name="model">
-                  <object class="GtkStringList" id="namespaces">
-                  </object>
-                </property>
-              </object>
-            </child>
           </object>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
-            <property name="hscrollbar-policy">never</property>
-            <property name="min-content-height">360</property>
-            <property name="vexpand">true</property>
+          <object class="AdwLeafletPage">
+            <property name="navigatable">False</property>
+            <property name="child">
+              <object class="GtkSeparator" />
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
+            <property name="spacing">6</property>
             <child>
-              <object class="GtkListView" id="list_view">
-                <property name="valign">start</property>
-                <property name="show-separators">True</property>
+              <object class="GtkBox">
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label">Namespace: </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkDropDown" id="namespace_dropdown">
+                    <property name="model">
+                      <object class="GtkStringList" id="namespaces">
+                      </object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow">
+                <property name="hscrollbar-policy">never</property>
+                <property name="min-content-height">360</property>
+                <property name="vexpand">true</property>
+                <child>
+                  <object class="GtkListView" id="list_view">
+                    <property name="valign">start</property>
+                    <property name="show-separators">True</property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
         </child>
       </object>
-    </child>
+    </property>
   </template>
 </interface>
